# frameit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
src/frameit/: __main__.py  frameit.py
src/frameit/scraper/: __init__.py  artic_scraper.py  listing.py  scraper.py
